[package]
name = "network-catcher-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"] }
winapi = { version = "0.3", features = ["winuser", "windef", "winsock2", "ws2def", "ws2ipdef", "iphlpapi", "winioctl", "ioapiset", "securitybaseapi", "processthreadsapi", "handleapi", "winnt"] }

